public enum TipoDeTransportePublico {
  TREN, SUBTE, COLECTIVO
}
